2003-01-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el (w3mhack-examine-modules, w3mhack-load-path): Check
	the existence of Gnus for shimbun/nnshimbun.el.

2003-01-23  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/nnshimbun.el: Import from Semi-gnus.

2003-01-23  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el (shimbun-palmfan-date-regexp): Typo fixed.

2003-01-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-function-max-args): Don't use the arglist
	destructively.

	* mime-w3m.el (kill-new): Don't refer to the whole arglist of the
	original function.

2003-01-21  Masatake YAMATO  <jet@gyve.org>

	* w3m.el (w3m-scroll-down-or-previous-url): Added doc string.

2003-01-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (toplevel): Strict checking that buggy
	`w3m-time-parse-string' is used.

2003-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-savannah.el (shimbun-savannah-reverse-flag): New var.
	(shimbun-savannah-get-headers): Don't use `nreverse'; modify id.

2003-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-savannah.el: Change it to be based on MHonArc.
	(shimbun-savannah-url): Change the value.
	(shimbun-savannah-group-path-alist): Add some groups.
	(shimbun-savannah-litemplate-regexp): New variable.
	(shimbun-savannah-x-face-alist): Improve the appearance.
	(shimbun-savannah-index-url): New function.
	(shimbun-index-url): Use it.
	(shimbun-savannah-get-headers): New function.
	(shimbun-get-headers): Use it.

2003-01-14  Katsumi Yamaoka  <yamaoka@jpl.org>
	Suggested by KURIHARA Kenichi <kenichi_kurihara@nifty.com>.

	* w3m.el (w3m-async-exec): Always default to `t'.
	(w3m-process-connection-type): Default to `nil' under MacOS X.

2003-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Insert one excessive newline
	after a @foo{bar} thing to prevent clinging of a line and a line