@@ -913,14 +913,6 @@ NOTE: This function must be called from the top directory."
 			    (delete-region (point) (save-excursion
 						     (forward-line 1)
 						     (point))))))))))
-	    ;; Insert one excessive newline after a @foo{bar} thing to
-	    ;; prevent clinging of a line and a line (old texinfmt bug?)
-	    ;; if it should be considered only one thing in a line.
-	    (goto-char (point-min))
-	    (while (re-search-forward "^[\t ]*@[a-z]+{.+}[\t ]*\n[\t ]*\n"
-				      nil t)
-	      (if (not (looking-at "[\t ]*$\\|[\t ]*@[a-z]+[\t\n ]"))
-		  (insert "\n")))
 	    (texinfo-mode)
 	    (texinfo-every-node-update)
 	    (set-buffer-modified-p nil)
